Change Map setting.

--- a/css/style.less
+++ b/css/style.less
@@ -53,7 +53,7 @@ h1, h2, h3{
 }
 
 .header-banner:after {
-    background: url("../image/master_banner.png") repeat scroll center center transparent;
+    background: url("../image/master_banner.png") repeat fixed center center transparent;
     bottom: 0;
     content: "";
     display: block;
