--- a/css/style.less
+++ b/css/style.less
@@ -23,7 +23,19 @@ h1, h2, h3{
 }
 .header-banner
 {
-	background: linear-gradient(45deg, #E67E22 0%, #D35400 100%) repeat scroll 0 0 transparent;
+	background: #D35400  linear-gradient(45deg, #E67E22 0%, #D35400 100%) repeat scroll 0 0 transparent;
+
+	background: #E67E22;
+	background: -moz-linear-gradient(45deg, #E67E22 0%, #D35400 100%);
+	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#E67E22), color-stop(100%,#D35400));
+	background: -webkit-linear-gradient(45deg, #E67E22 0%,#D35400 100%);
+	background: -o-linear-gradient(45deg, #E67E22 0%,#D35400 100%);
+	background: -ms-linear-gradient(45deg, #E67E22 0%,#D35400 100%);
+	background: linear-gradient(45deg, #E67E22 0%,#D35400 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E67E22', endColorstr='#D35400',GradientType=1 );
+	-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+	-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+
 	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
 	padding:100px 0px;
 	position: relative;
@@ -37,7 +49,6 @@ h1, h2, h3{
 	}
 	.container
 	{
-		margin-top: 40px;
 	}
 	p 
 	{
