--- a/css/style.less
+++ b/css/style.less
@@ -36,6 +36,7 @@ h1, h2, h3{
 	-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
 	-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
 
+
 	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
 	padding:100px 0px;
 	position: relative;
@@ -49,6 +50,7 @@ h1, h2, h3{
 	}
 	.container
 	{
+		padding-top: 40px;
 	}
 	p 
 	{
