update css and content.

--- a/css/style.less
+++ b/css/style.less
@@ -118,6 +118,19 @@ h1, h2, h3{
 		margin-top: 2em;
 		height: 200px;
 		border:10px solid #E67e22;
+
+		*[class="leaflet-bottom leaflet-right"]{
+
+			*[class="leaflet-control-attribution leaflet-control"]
+			{
+				background-color: none;
+				box-shadow: none;
+				a
+				{
+					color: #E67e22;
+				}
+			}
+		}
 	}
 }
 
