--- a/css/style.less
+++ b/css/style.less
@@ -10,7 +10,7 @@ body
 	font-family: 'Maven Pro';
 }
 
-h1, h2, h3{
+h1, h2, h3, h4, h5, h6{
 	font-family: 'Lilita One';
 	font-weight: 400;
 }
@@ -23,6 +23,10 @@ h1, h2, h3{
 /* Works in Safari */
 ::selection {
    background-color: @carrot;
+}
+
+.table tr td{
+	vertical-align: middle;
 }
 
 .navbar
